<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp" >

    <ImageView
        android:id="@+id/flag"
        android:layout_width="300dp"
        android:layout_height="158dp"
        android:padding="8dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_descriptor_string" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flag"
        android:layout_margin="8dp" >

       <TextView
            android:id="@+id/place_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_name_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_text_87" />

        <TextView
            android:id="@+id/place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/place_string"            
            android:layout_toRightOf="@+id/place_string"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_text_87" />

        <TextView
            android:id="@+id/country_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/place_name"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/country_name_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_text_87" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/country_string"
            android:layout_below="@+id/place_name"
            android:layout_toRightOf="@+id/country_string"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_text_87" />

        <TextView
            android:id="@+id/date_visited_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country_name"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/date_visited_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_text_87" />

        <TextView
            android:id="@+id/date_visited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/date_visited_string"
            android:layout_below="@+id/country_name"
            android:layout_toRightOf="@+id/date_visited_string"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_text_87" />

        <TextView
            android:id="@+id/gps_coordinates_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_visited_string"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/gps_coordinates_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_text_87" />

        <TextView
            android:id="@+id/gps_coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/gps_coordinates_string"
            android:layout_toRightOf="@+id/gps_coordinates_string"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_text_87" />
    </RelativeLayout>

</RelativeLayout>